--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Jeff Lingwall</a>
+      <a class="navbar-brand" href="index.html">BSAD 234</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -198,7 +198,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Jeff Lingwall</h1>
+<h1 class="title toc-ignore">BSAD 234</h1>
 
 </div>
 
