--- a/handouts.html
+++ b/handouts.html
@@ -158,17 +158,9 @@ $(document).ready(function () {
         <h1 id="BSAD234">BSAD 234</h1>
         <p class="subtitle">Legal Environment of Business</p>
         <section>
-          <h2 id="introduction">Fall 2018</h2>
+          <h2 id="introduction">Handouts</h2>
 
-
-
-<p><span class="newthought">Welcome to BSAD 234</span>, Legal Environment of Business. This is an intensive class on the history and application of United States law in a business context, although we won't limit ourselves strictly to business applications. This landing page has a few quick, helpful links..</p>
-
-
-<ul>
-  <li> <a href="https://docs.google.com/document/d/1fti6s5EvfJ2CNGLEY3siE1_IH1vMSSvUZBZ7Cn_JqZ4/edit?usp=sharing">The syllabus</a> (You'll need to be logged in with Truman email to view.)</li>
-  <li><a href="https://drive.google.com/open?id=1PTdsNTj6YqTQN9H8jCu-F5mqFjL5YCVn">Google Drive</a>, this is a folder for the class that hosts extra readings, homework, and so on.</li>
-</ul>
+This will contain links to class handouts as they're posted.
 
 
 <!--
