--- a/index.html
+++ b/index.html
@@ -162,14 +162,20 @@ $(document).ready(function () {
 
 
 
-<p><span class="newthought">Welcome to BSAD 234</span>, Legal Environment of Business. This is an intensive class on the history and application of United States law in a business context, although we won't limit ourselves strictly to business applications. This landing page has a few quick, helpful links..</p>
+<p><span class="newthought">Welcome to BSAD 234</span>, Legal Environment of Business. This is an intensive class on the history and application of United States law in a business context, although we won't limit ourselves strictly to business applications. This landing page has a few quick, helpful links ....</p>
 
 
 <ul>
-  <li> <a href="https://docs.google.com/document/d/1fti6s5EvfJ2CNGLEY3siE1_IH1vMSSvUZBZ7Cn_JqZ4/edit?usp=sharing">The syllabus</a> (You'll need to be logged in with Truman email to view.)</li>
-  <li><a href="https://drive.google.com/open?id=1PTdsNTj6YqTQN9H8jCu-F5mqFjL5YCVn">Google Drive</a>, this is a folder for the class that hosts extra readings, homework, and so on.</li>
+  <li> <a href="https://docs.google.com/document/d/1fti6s5EvfJ2CNGLEY3siE1_IH1vMSSvUZBZ7Cn_JqZ4/edit?usp=sharing" target="_blank">Syllabus</a> (You'll need to be logged in with Truman email to view.)</li>
+  <li><a href="https://drive.google.com/open?id=1PTdsNTj6YqTQN9H8jCu-F5mqFjL5YCVn" target="_blank">Google Drive</a>, this is a folder for the class that hosts extra readings, homework, and so on.</li>
+  <li><a href="https://www.law.cornell.edu/constitution" target="_blank">The United States Constitution</a>, just to save you from Googling</li>
+  <li>Recent Supreme Court cases on <a href="http://www.scotusblog.com/case-files/terms/ot2018/" target="_blank">Scotusblog</a></li>
+  <li>The <a href="http://www.moga.mo.gov/mostatutes/statutesAna.html" target="_blank">Revised Statutes of Missouri</a> will be our source when we want to find specific answers under state law.</li>
+  <li><a href="https://www.law.berkeley.edu/library/robbins/CommonLawCivilLawTraditions.html" target="_blank">Common law versus civil law</a></li>
+
 </ul>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Z362xRWaCJE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 <!--
 <p><span class="newthought">This is a step by step</span>, slow introduction to blockchain technology from a <em>coding</em> perspective. Blockchain is a clever series of interrelated algorithms, and I believe strongly that the only way to really understand a particular algorithm <em>is to code it up yourself</em>.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">My experience teaching coding bears this out strongly. Coding is a skill, which like tennis or the piano must be learned by trial and error rather than study.</span>
