Updated SCOTUS reference

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ $(document).ready(function () {
   <li> <a href="https://docs.google.com/document/d/1fti6s5EvfJ2CNGLEY3siE1_IH1vMSSvUZBZ7Cn_JqZ4/edit?usp=sharing" target="_blank">Syllabus</a> (You'll need to be logged in with Truman email to view.)</li>
   <li><a href="https://drive.google.com/open?id=1PTdsNTj6YqTQN9H8jCu-F5mqFjL5YCVn" target="_blank">Google Drive</a>, this is a folder for the class that hosts extra readings, homework, and so on.</li>
   <li><a href="https://www.law.cornell.edu/constitution" target="_blank">The United States Constitution</a>, just to save you from Googling</li>
-  <li>Recent Supreme Court cases on <a href="http://www.scotusblog.com/case-files/terms/ot2018/" target="_blank">Scotusblog</a></li>
+  <li>Recent Supreme Court cases on <a href="http://www.scotusblog.com/case-files/terms/ot2018/" target="_blank">SCOTUSblog</a></li>
   <li>The <a href="http://www.moga.mo.gov/mostatutes/statutesAna.html" target="_blank">Revised Statutes of Missouri</a> will be our source when we want to find specific answers under state law.</li>
   <li><a href="https://www.law.berkeley.edu/library/robbins/CommonLawCivilLawTraditions.html" target="_blank">Common law versus civil law</a></li>
 
