--- a/handouts.html
+++ b/handouts.html
@@ -155,27 +155,89 @@ $(document).ready(function () {
 
 
       <article>
-        <h1 id="BSAD234">BSAD 234</h1>
-        <p class="subtitle">Legal Environment of Business</p>
+        <h1 id="BSAD234">Handouts</h1>
+        <p class="subtitle">BSAD 234, Business Law</p>
+
+
+
         <section>
-          <h2 id="introduction">Handouts</h2>
 
-This will contain links to class handouts as they're posted.
+<p>This page outlines the class in a bit more detail, and will have links to handouts for each lesson posted as we proceed.</p>
+
+<p>Each section of the course will have a short, open-everything-except-living-people exam following it. <label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">Think of these as mini midterms.</span>
+
+          <h2 id="Lesson1">Lesson 1: What law is, where it comes from, how it works</h2>
+
+          <p>In this section we'll cover "big picture" topics (the idea of law, sources of law, levels of authority), as well as particulars (how to read court cases, how citations work, etc).</p> <p>The first three chapters will give us the broad basics of the legal system.</p>
+
+          <ul>
+            <li>Chapter 1: An introduction to the idea of law, how to read cases, and so on.</li>
+            <li>Chapter 2: Discusses how disputes are resolved (e.g., courts versus arbitration)</li>
+            <li>Chapter 3: The basics of civil procedure (what happens when you choose to resolve a dispute in court)</li>
+
+                      </ul>
+
+                      <p>The next two chapters will probe the boundaries of law. If we leave behind traditional enforcement mechanisms, does law exist? Should it?</p>
+
+                      <ul>
+
+            <li>Chapter 5: Law versus ethics</li>
+            <li>Chapter 24: International law</li>
+          </ul>
 
 
-<!--
-<p><span class="newthought">This is a step by step</span>, slow introduction to blockchain technology from a <em>coding</em> perspective. Blockchain is a clever series of interrelated algorithms, and I believe strongly that the only way to really understand a particular algorithm <em>is to code it up yourself</em>.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">My experience teaching coding bears this out strongly. Coding is a skill, which like tennis or the piano must be learned by trial and error rather than study.</span>
-
-<p>
-Much of this is based on <a href="https://hackernoon.com/learn-blockchains-by-building-one-117428612f46">an excellent blog post<a> by
-Daniel van Flymen, supplemented with x, y, and z.
-</p>
- -->
 
 
+  <h2 id="Lesson2">Lesson 2: Law stemming from the Constitution</h2>
+<p>This section will examine the law flowing from the Constitution: (1) constitutional law itself, particularly criminal procedure, (2) statutory interpretation through antitrust law, and (3) administrative law, particularly through environmental and employment law. The reading on the Constitution and statutory law is:</p>
+
+<ul>
+  <li>Chapter 4: The Constitution</li>
+  <li>Chapter 10: Criminal law</li>
+  <li>Chapter 46: Antitrust law</li>
+  </ul>
+<p>After that, we'll move to administrative law as applied to the environment and employment.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">We'll do a brief lecture on agency law, without reading.</span></p>
+  <ul>
+
+  <li>Chapter 43: Administrative law</li>
+  <li>Chapter 45: Environmental law</li>
+  <li>Chapter 34: Employment law part 1</li>
+  <li>Chapter 35: Employment law part 2</li>
+
+</ul>
 
 
 
+  <h2 id="Lesson2">Lesson 3: Business organizations</h2>
+<p>As a very large special case of statutory law, we'll examine ways to protect yourself from liability through business organizations in this section. We'll study corporations, partnerships, LLCs, and securities regulation. We haven't included these sections in our book, so the reading will be TBA.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"/><span class="sidenote">For this small section, we will have a quiz rather than a test.</span></p>
+
+
+
+<h2 id="Lesson4">Lesson 4: Common law part 1 (involuntary obligations)</h2>
+<p>In this section we'll study tort and property law, the common law obligations imposed involuntarily.</p>
+<ul>
+  <li>Chapter 5: Torts</li>
+  <li>Chapter 6: Strict liability torts</li>
+  <li>Chapter 48: Personal property</li>
+  <li>Chapter 49: Real property</li>
+
+  </ul>
+<p>After that, we'll move to administrative law as applied to the environment and employment.</p>
+
+
+
+
+<h2 id="Lesson5">Lesson 5: Common law part 2 (voluntary obligations)</h2>
+<p>The law of contracts. The reading is:</p>
+
+
+<ul>
+
+<li>Chapters 11-19: The common law of contracts</li>
+<li>Chapter 23: Warranties</li>
+</ul>
+
+<p>and a little TBA reading on the UCC.</p>
 
 </div>
 
