--- a/Handout_01.html
+++ b/Handout_01.html
@@ -42,7 +42,7 @@
 
           <p>
             <span class="marginnote shownote"> <!--
-<div class="figure">--> <img src="images/rod-long-655830-unsplash.jpg" width="336"  /> </span>
+<div class="figure">--> <img src="images/rod-long-655830-unsplash.png" width="336"  /> </span>
           </p>
 
           <p>
