--- a/Handout_03.html
+++ b/Handout_03.html
@@ -27,7 +27,7 @@
 
       <p>No new reading, you get a break!
 
-        <p><em>Suggested (minimum!) time use:</em> half an hour to review chapters 1 and 2, half an hour to do the homework, one hour to start Short Paper #1.</p>
+        <p><em>Suggested (minimum!) time use:</em> half an hour to review chapters 1 and 2, half an hour to do the homework, one hour to start <a href="https://docs.google.com/document/d/1sQ969ZDUSaDQabfnSm2bTxa8FdFW-1FTpptuHicC9es/edit?usp=sharing">Short Paper #1</a>.</p>
 
 
         <h2>Class Work</h2>
