--- a/Handout_02.html
+++ b/Handout_02.html
@@ -29,22 +29,23 @@
 
         <p><em>Suggested (minimum!) time use:</em> one hour to read the chapter, one hour to do the homework.</p>
 
-        <h2>Class Work</h2> In class, we'll finish our lecture on sources of law and finding the law. Then we'll work on the whiteboard to show some principles from Chapter 2
+        <h2>Class Work</h2>
+        <p>In class, we'll finish our lecture on sources of law and finding the law. Then we'll work on the whiteboard to show some principles from Chapter 2
 
-        <h2>Homework 02</h2>
+          <h2>Homework 02</h2>
 
-        <p>Working with groups is encouraged. Designate someone to turn in a single copy, with all group members' names, on Blackboard.</p>
+          <p>Working with groups is encouraged. Designate someone to turn in a single copy, with all group members' names, on Blackboard.</p>
 
-        <ol>
-          <li>Find a case from the Eighth Circuit Court of Appeals. Make IRAC bullet points, as we did with <em>Roe</em> in Homework 01. </li>
-          <li>Look at your cellphone contract. What does it say about arbitration? What are the advantages / disadvantages of this clause for the company? For you?</li>
-          <li>Work Business Scenario 2-1.</li>
-          <li> Work Business Case Problem 2-2.</li>
-          <li>Work Business Case Problem 2-4.</li>
-          <li>Work Business Case Problem 2-9.</li>
-        </ol>
+          <ol>
+            <li>Find a case from the Eighth Circuit Court of Appeals. Make IRAC bullet points, as we did with <em>Roe</em> in Homework 01. </li>
+            <li>Look at your cellphone contract. What does it say about arbitration? What are the advantages / disadvantages of this clause for the company? For you?</li>
+            <li>Work Business Scenario 2-1.</li>
+            <li> Work Business Case Problem 2-2.</li>
+            <li>Work Business Case Problem 2-4.</li>
+            <li>Work Business Case Problem 2-9.</li>
+          </ol>
 
 
-        <h2>Next time ....</h2>
+          <h2>Next time ....</h2>
 
-        <p>We'll review the history of the common law, and discuss the homework questions above.</p>
+          <p>We'll review the history of the common law, and discuss the homework questions above.</p>
