--- a/handouts.html
+++ b/handouts.html
@@ -196,78 +196,85 @@
               <li>Chapter 3: The basics of civil procedure (what happens when you choose to resolve a dispute in court)</li>
 
             </ul>
+            <p>We'll also spend a day outside the book, and I'll give you a history of the common law.</p>
 
-            <p>The next two chapters will probe the boundaries of law. If we leave behind traditional enforcement mechanisms, does law exist? Should it?</p>
+            <h3>Handouts and Slides</h3>
 
-            <ul>
-
-              <li>Chapter 5: Law versus ethics</li>
-              <li>Chapter 24: International law</li>
-            </ul>
-
-            <h3>Handouts for this section</h3>
-
-            <p><a href="Handout_01">Handout 01</a>
-              <p><a href="Handout_02">Handout 02</a>
-                <p><a href="Handout_03">Handout 03</a>
-                  <p><a href="Handout_04">Handout 04</a>
+            <p><a href="https://docs.google.com/presentation/d/1_x1OBoQbB80BaFef5v8kF0GHpKbiwb2lCw5Kr4vohYc/edit?usp=sharing">Slide Deck 01: What law is, and so forth</a>
+              <p><a href="https://drive.google.com/open?id=1VI84PMu8W16ZuHyo1LNPc9HoZuaNeODU">Slide Deck 02: History of the Common Law</a>
+                <p><a href="Handout_01">Handout 01</a>
+                  <p><a href="Handout_02">Handout 02</a>
+                    <p><a href="Handout_03">Handout 03</a>
+                      <p><a href="Handout_04">Handout 04</a>
 
 
 
-                    <h2 id="Lesson2">Lesson 2: Law stemming from the Constitution</h2>
-                    <p>This section will examine the law flowing from the Constitution: (1) constitutional law itself, particularly criminal procedure, (2) statutory interpretation through antitrust law, and (3) administrative law, particularly through environmental
-                      and employment law. The reading on the Constitution and statutory law is:</p>
+                        <p>The next two chapters will probe the boundaries of law. If we leave behind traditional enforcement mechanisms, does law exist? Should it?</p>
 
-                    <ul>
-                      <li>Chapter 4: The Constitution</li>
-                      <li>Chapter 10: Criminal law</li>
-                      <li>Chapter 46: Antitrust law</li>
-                    </ul>
-                    <p>After that, we'll move to administrative law as applied to the environment and employment.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes"
-                        class="margin-toggle" /><span class="sidenote">We'll do a brief lecture on agency law, without reading.</span></p>
-                    <ul>
+                        <ul>
 
-                      <li>Chapter 43: Administrative law</li>
-                      <li>Chapter 45: Environmental law</li>
-                      <li>Chapter 34: Employment law part 1</li>
-                      <li>Chapter 35: Employment law part 2</li>
-
-                    </ul>
-
-
-
-                    <h2 id="Lesson2">Lesson 3: Business organizations</h2>
-                    <p>As a very large special case of statutory law, we'll examine ways to protect yourself from liability through business organizations in this section. We'll study corporations, partnerships, LLCs, and securities regulation. We haven't
-                      included these sections in our book, so the reading will be TBA.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"
-                      /><span class="sidenote">For this small section, we will have a quiz rather than a test.</span></p>
-
-
-
-                    <h2 id="Lesson4">Lesson 4: Common law part 1 (involuntary obligations)</h2>
-                    <p>In this section we'll study tort and property law, the common law obligations imposed involuntarily.</p>
-                    <ul>
-                      <li>Chapter 5: Torts</li>
-                      <li>Chapter 6: Strict liability torts</li>
-                      <li>Chapter 48: Personal property</li>
-                      <li>Chapter 49: Real property</li>
-
-                    </ul>
-                    <p>After that, we'll move to administrative law as applied to the environment and employment.</p>
+                          <li>Chapter 5: Law versus ethics</li>
+                          <li>Chapter 24: International law</li>
+                        </ul>
 
 
 
 
-                    <h2 id="Lesson5">Lesson 5: Common law part 2 (voluntary obligations)</h2>
-                    <p>The law of contracts. The reading is:</p>
+
+                        <h2 id="Lesson2">Lesson 2: Law stemming from the Constitution</h2>
+                        <p>This section will examine the law flowing from the Constitution: (1) constitutional law itself, particularly criminal procedure, (2) statutory interpretation through antitrust law, and (3) administrative law, particularly through
+                          environmental and employment law. The reading on the Constitution and statutory law is:</p>
+
+                        <ul>
+                          <li>Chapter 4: The Constitution</li>
+                          <li>Chapter 10: Criminal law</li>
+                          <li>Chapter 46: Antitrust law</li>
+                        </ul>
+                        <p>After that, we'll move to administrative law as applied to the environment and employment.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes"
+                            class="margin-toggle" /><span class="sidenote">We'll do a brief lecture on agency law, without reading.</span></p>
+                        <ul>
+
+                          <li>Chapter 43: Administrative law</li>
+                          <li>Chapter 45: Environmental law</li>
+                          <li>Chapter 34: Employment law part 1</li>
+                          <li>Chapter 35: Employment law part 2</li>
+
+                        </ul>
 
 
-                    <ul>
 
-                      <li>Chapters 11-19: The common law of contracts</li>
-                      <li>Chapter 23: Warranties</li>
-                    </ul>
+                        <h2 id="Lesson2">Lesson 3: Business organizations</h2>
+                        <p>As a very large special case of statutory law, we'll examine ways to protect yourself from liability through business organizations in this section. We'll study corporations, partnerships, LLCs, and securities regulation. We haven't
+                          included these sections in our book, so the reading will be TBA.<label for="sn-extensive-use-of-sidenotes" class="margin-toggle sidenote-number"></label><input type="checkbox" id="sn-extensive-use-of-sidenotes" class="margin-toggle"
+                          /><span class="sidenote">For this small section, we will have a quiz rather than a test.</span></p>
 
-                    <p>and a little TBA reading on the UCC.</p>
+
+
+                        <h2 id="Lesson4">Lesson 4: Common law part 1 (involuntary obligations)</h2>
+                        <p>In this section we'll study tort and property law, the common law obligations imposed involuntarily.</p>
+                        <ul>
+                          <li>Chapter 5: Torts</li>
+                          <li>Chapter 6: Strict liability torts</li>
+                          <li>Chapter 48: Personal property</li>
+                          <li>Chapter 49: Real property</li>
+
+                        </ul>
+                        <p>After that, we'll move to administrative law as applied to the environment and employment.</p>
+
+
+
+
+                        <h2 id="Lesson5">Lesson 5: Common law part 2 (voluntary obligations)</h2>
+                        <p>The law of contracts. The reading is:</p>
+
+
+                        <ul>
+
+                          <li>Chapters 11-19: The common law of contracts</li>
+                          <li>Chapter 23: Warranties</li>
+                        </ul>
+
+                        <p>and a little TBA reading on the UCC.</p>
 
     </div>
 
