--- a/Handout_03.html
+++ b/Handout_03.html
@@ -33,6 +33,22 @@
         <h2>Class Work</h2>
         <p> We'll walk through the history of the common law. I'll mostly lecture at you.
 
+          <p>Key points to get from the lecture:</p>
+
+          <ul>
+            <li>What is the difference between law and equity?</li>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <li>How did juries change over time?</li>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+            <li>How do economic events affect the law?</li>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+            <li>How has perception of religion changed the law over time?</li>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+          </ul>
+
           <h2>Homework 03</h2>
 
           <p>Working with groups is encouraged. Designate someone to turn in a single copy, with all group members' names, on Blackboard.</p>
