--- a/handouts.html
+++ b/handouts.html
@@ -200,12 +200,12 @@
 
             <h3>Handouts and Slides</h3>
 
-            <p><a href="https://docs.google.com/presentation/d/1_x1OBoQbB80BaFef5v8kF0GHpKbiwb2lCw5Kr4vohYc/edit?usp=sharing">Slide Deck 01: What law is, and so forth</a>
-              <p><a href="https://drive.google.com/open?id=1VI84PMu8W16ZuHyo1LNPc9HoZuaNeODU">Slide Deck 02: History of the Common Law</a>
-                <p><a href="Handout_01">Handout 01</a>
-                  <p><a href="Handout_02">Handout 02</a>
-                    <p><a href="Handout_03">Handout 03</a>
-                      <p><a href="Handout_04">Handout 04</a>
+            <p><a href="https://docs.google.com/presentation/d/1_x1OBoQbB80BaFef5v8kF0GHpKbiwb2lCw5Kr4vohYc/edit?usp=sharing" target="_blank">Slide Deck 01: What law is, and so forth</a>
+              <p><a href="https://drive.google.com/open?id=1VI84PMu8W16ZuHyo1LNPc9HoZuaNeODU" target="_blank">Slide Deck 02: History of the Common Law</a>
+                <p><a href="Handout_01" target="_blank">Handout 01</a>
+                  <p><a href="Handout_02" target="_blank">Handout 02</a>
+                    <p><a href="Handout_03" target="_blank">Handout 03</a>
+                      <p><a href="Handout_04" target="_blank">Handout 04</a>
 
 
 
