--- a/Handout_01.html
+++ b/Handout_01.html
@@ -38,7 +38,7 @@
 
 
 
-          <p>We'll discuss the role of law in the simplest possible business: a lemonade stand. Things will get sticky pretty quickly. <a href="https://docs.google.com/presentation/d/1_x1OBoQbB80BaFef5v8kF0GHpKbiwb2lCw5Kr4vohYc/edit?usp=sharing">Slides used in class</a>            </p>
+          <p>We'll discuss the role of law in the simplest possible business: a lemonade stand. Things will get sticky pretty quickly. <a href="https://docs.google.com/presentation/d/1_x1OBoQbB80BaFef5v8kF0GHpKbiwb2lCw5Kr4vohYc/edit?usp=sharing" target="_blank">Slides used in class</a>            </p>
 
           <p>
             <span class="marginnote shownote"> <!--
