--- a/Handout_02.html
+++ b/Handout_02.html
@@ -30,17 +30,24 @@
         <p><em>Suggested (minimum!) time use:</em> one hour to read the chapter, one hour to do the homework.</p>
 
         <h2>Class Work</h2>
-        <p>In class, we'll finish our lecture on sources of law and finding the law. Then we'll work on the whiteboard to show some principles from Chapter 2
+        <p>In class, we'll finish our lecture on sources of law and finding the law.
 
           <h2>Homework 02</h2>
 
           <p>Working with groups is encouraged. Designate someone to turn in a single copy, with all group members' names, on Blackboard.</p>
 
           <ol>
-            <li>Find a case from the Eighth Circuit Court of Appeals. Make IRAC bullet points, as we did with <em>Roe</em> in Homework 01. </li>
-            <li>Look at your cellphone contract. What does it say about arbitration? What are the advantages / disadvantages of this clause for the company? For you?</li>
-            <li>Work Business Scenario 2-1.</li>
-            <li> Work Business Case Problem 2-2.</li>
+            <li>For Business Scenario problem 2-1 on "standing", make IRAC bullet points, as we talked through with the <em>Say Yes to the Dress</em> case in class. There, we would sketch it out something like:
+              <ul>
+                <li>Issue: Should the Plaintiff receive a temporary restraining order stopping the show?</li>
+                <li>Rule: A temporary restraining order requires an immediate, irreparable injury.</li>
+                <li>Analysis: While Plaintiff's injury is immediate, it is not irreperable, as she can simply ask others not to view the show.</li>
+                <li>Conclusion: Plaintiff should not get a restraining order.</li>
+              </ul>
+
+
+            </li>
+            <li>Be sure to read chapter 2's section on arbitration versus courts. Look at your cellphone contract. What does it say about arbitration? What are the advantages / disadvantages of this clause for the company? For you?</li>
             <li>Work Business Case Problem 2-4.</li>
             <li>Work Business Case Problem 2-9.</li>
           </ol>
