--- a/Handout_03.html
+++ b/Handout_03.html
@@ -54,8 +54,8 @@
           <p>Working with groups is encouraged. Designate someone to turn in a single copy, with all group members' names, on Blackboard.</p>
 
           <ol>
-            <li>Work through the questions at the end of the <em>Mala</em> case in Chapter 2.</li>
-            <li>Work through the questions at the end of the Stan Garner case on page 45.</li>
+            <li>Work through the questions at the end of the <em>Mala</em> case in Chapter 2. Don't worry about "admiralty jurisdiction."</li>
+            <li>Work through questions 1 and 2 at the end of the Stan Garner case on page 45 (under "Reviewing: Courts and Alternative Dispute Resolution").</li>
           </ol>
 
 
