--- a/Handout_04.html
+++ b/Handout_04.html
@@ -34,7 +34,7 @@
 
 
           <h2>Class Work</h2>
-          <p> I'll walk you through the civil procedure involved in a typical class action.
+          <p> I'll walk you through the civil procedure involved in a typical class action, and we'll discuss the role of arbitration clauses.
 
             <h2>Homework 04</h2>
 
@@ -43,7 +43,6 @@
             <ol>
               <li> Work through the Ronald Metzgar review questions on page 67.
                 <li> What is the difference between a complaint, a motion for summary judgment, and a motion to dismiss?
-                  <li>Why don't businesses like discovery when they get sued?</li>
                   <li> Work through problem 3-2 on page 68.
                     <li>Work through problem 3-6 on page 68.</li>
             </ol>
