--- a/Handout_05.html
+++ b/Handout_05.html
@@ -29,7 +29,13 @@
 
         <p><em>Suggested (minimum!) time use:</em> 45 minutes to read the chapter as above, 45 minutes to do the homework, 20 minutes to continue work on Short Paper #1, 10 minutes for your continuous review.</p>
 
-        <p>If it's helpful, <a href="https://docs.google.com/document/d/14dIREfKsgn9DymO1HJ1TbbEWu8VEpRTXm7H_WeOswDs/edit" target="_blank">here is a chapter outline</a> </p>
+        <p>If it's helpful, <a href="https://docs.google.com/document/d/14dIREfKsgn9DymO1HJ1TbbEWu8VEpRTXm7H_WeOswDs/edit" target="_blank">here is a chapter outline</a>. </p>
+
+        Also, if it's helpful, here are videos walking through the chapter. You don't have to watch these, but if your learning style is aided by a video walkthrough, I hope these help. You'll need to be logged into your browser with Truman email to view.
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/e1lmy9Yw5Hg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/0c1gPoG_KCM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 
         <p> If you want some extra review reading, see <a href="https://drive.google.com/file/d/0Bxb14OQixVf9Z1NUOEFvSDN4RUllcW0tV1RLYVZNa0JsNmRn/view" target="_blank">here</a>. This is from a Truman-student written textbook covering the material in our course.
