--- a/Handout_05.html
+++ b/Handout_05.html
@@ -31,38 +31,42 @@
 
         <p>If it's helpful, <a href="https://docs.google.com/document/d/14dIREfKsgn9DymO1HJ1TbbEWu8VEpRTXm7H_WeOswDs/edit" target="_blank">here is a chapter outline</a>. </p>
 
-        Also, if it's helpful, here are videos walking through the chapter. You don't have to watch these, but if your learning style is aided by a video walkthrough, I hope these help. You'll need to be logged into your browser with Truman email to view.
+        <p>
+
+          Also, if it's helpful, here are videos walking through the chapter. You don't have to watch these, but if your learning style is aided by a video walkthrough, I hope these help. You'll need to be logged into your browser with Truman email to view.</p>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/e1lmy9Yw5Hg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/0c1gPoG_KCM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/0c1gPoG_KCM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 
-        <p> If you want some extra review reading, see <a href="https://drive.google.com/file/d/0Bxb14OQixVf9Z1NUOEFvSDN4RUllcW0tV1RLYVZNa0JsNmRn/view" target="_blank">here</a>. This is from a Truman-student written textbook covering the material in our course.
+          <p> If you want some extra review reading, see <a href="https://drive.google.com/file/d/0Bxb14OQixVf9Z1NUOEFvSDN4RUllcW0tV1RLYVZNa0JsNmRn/view" target="_blank">here</a>. This is from a Truman-student written textbook covering the material in our
+            course.
 
 
 
-          <h2>Class Work</h2>
-          <p> We'll walk through some big ideas in business ethics, particularly as to what duties corporations may owe the world.
+            <h2>Class Work</h2>
+            <p> We'll walk through some big ideas in business ethics, particularly as to what duties corporations may owe the world.
 
-            <h2>Homework 05</h2>
+              <h2>Homework 05</h2>
 
-            <p>Working with groups is encouraged. Designate someone to turn in a single copy, with all group members' names, on Blackboard.</p>
+              <p>Working with groups is encouraged. Designate someone to turn in a single copy, with all group members' names, on Blackboard.</p>
 
 
-            <ol>
-              <li>In your own words, what is Kant’s “categorical imperative”?
-              </li>
-              <li>Give an example of how someone might apply the categorical imperative in practice.</li>
-              <li>How does someone who follows utilitarianism make ethical decisions?</li>
-              <li>How does someone who follows a “principles of rights” ethical framework make decisions?</li>
-              <li>Using the Say Yes to the Dress case discussed in class, show how someone using the four ethical frameworks from Chapter 5 § 3 would evaluate the situation. For example, would the categorical imperative suggest suing about this? Did the show
-                violate a principle of rights?
-              </li>
-            </ol>
+              <ol>
+                <li>In your own words, what is Kant’s “categorical imperative”?
+                </li>
+                <li>Give an example of how someone might apply the categorical imperative in practice.</li>
+                <li>How does someone who follows utilitarianism make ethical decisions?</li>
+                <li>How does someone who follows a “principles of rights” ethical framework make decisions?</li>
+                <li>Using the Say Yes to the Dress case discussed in class, show how someone using the four ethical frameworks from Chapter 5 § 3 would evaluate the situation. For example, would the categorical imperative suggest suing about this? Did the
+                  show violate a principle of rights?
+                </li>
+              </ol>
 
-            <h2>Next time ....</h2>
+              <h2>Next time ....</h2>
 
-            <p>We'll cover international law to round out the introductory section of the class. At this point, we'll have a foundation of what American law is, where it comes from, how it relates to ethics, alternate dispute resolution, and international
-              law.
-            </p>
+              <p>We'll cover international law to round out the introductory section of the class. At this point, we'll have a foundation of what American law is, where it comes from, how it relates to ethics, alternate dispute resolution, and international
+                law.
+              </p>
