--- a/Handout_04.html
+++ b/Handout_04.html
@@ -29,7 +29,7 @@
 
         <p><em>Suggested (minimum!) time use:</em> 30 minutes to read the chapter, 60 minutes to do the homework, 20 minutes to continue work on Short Paper #1, 10 minutes for your continuous review.</p>
 
-        <p> If you want some extra review reading, see <a href="https://drive.google.com/file/d/0Bxb14OQixVf9SjM5S3hjUFlJQ3JJcTZXTEJlZ2d1bUN5ZGln/view">here</a>.
+        <p> If you want some extra review reading, see <a href="https://drive.google.com/open?id=15vNe2PaDNQlsaiCVZTSCtg4HNK4Jv06t">here</a>.
 
 
 
