--- a/handouts.html
+++ b/handouts.html
@@ -218,7 +218,7 @@
                         </ul>
 
 
-                        <p> <a href="https://drive.google.com/open?id=1tQ9OrcQZFlM1xbldd344O6zyZfh2gIcUvZwf9ekrcOY"></a>Slide Deck 03: Business Ethics</p>
+                        <p> <a href="https://drive.google.com/open?id=1tQ9OrcQZFlM1xbldd344O6zyZfh2gIcUvZwf9ekrcOY" target="_blank">Slide Deck 03: Business Ethics</a></p>
                         <p><a href="Handout_05" target="_blank">Handout 05</a>
 
                           <p><a href="Handout_06" target="_blank">Handout 06</a>
