--- a/Handout_05.html
+++ b/Handout_05.html
@@ -41,8 +41,7 @@
           <iframe width="560" height="315" src="https://www.youtube.com/embed/0c1gPoG_KCM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 
-          <p> If you want some extra review reading, see <a href="https://drive.google.com/file/d/0Bxb14OQixVf9Z1NUOEFvSDN4RUllcW0tV1RLYVZNa0JsNmRn/view" target="_blank">here</a>. This is from a Truman-student written textbook covering the material in our
-            course.
+          <p> If you want some extra review reading, see <a href="https://drive.google.com/open?id=14PuuPaqck1GGP3ox8twcq34iUb8yvMDh" target="_blank">here</a>. This is from a Truman-student written textbook covering the material in our course.
 
 
 
