--- a/handouts.html
+++ b/handouts.html
@@ -211,12 +211,15 @@
 
                         <p>The next two chapters will probe the boundaries of law. If we leave behind traditional enforcement mechanisms, does law exist? Should it?</p>
 
+
+
                         <ul>
 
                           <li>Chapter 5: Law versus ethics</li>
                           <li>Chapter 24: International law</li>
                         </ul>
 
+                        <h3>Handouts and Slides</h3>
 
                         <p> <a href="https://drive.google.com/open?id=1tQ9OrcQZFlM1xbldd344O6zyZfh2gIcUvZwf9ekrcOY" target="_blank">Slide Deck 03: Business Ethics</a></p>
                         <p><a href="Handout_05" target="_blank">Handout 05</a>
