--- a/handouts.html
+++ b/handouts.html
@@ -222,29 +222,30 @@
                         <h3>Handouts and Slides</h3>
 
                         <p> <a href="https://drive.google.com/open?id=1tQ9OrcQZFlM1xbldd344O6zyZfh2gIcUvZwf9ekrcOY" target="_blank">Slide Deck 03: Business Ethics</a></p>
-                        <p><a href="Handout_05" target="_blank">Handout 05</a>
+                        <p><a href="https://drive.google.com/open?id=1sqZJo56WVkibf2GGP64ldu0hkuJr4XCFxtoMZXE2llE
+                        " target="_blank">Slide Deck 04: International Law</a>
+                          <p><a href="Handout_05" target="_blank">Handout 05</a>
 
-                          <p><a href="Handout_06" target="_blank">Handout 06</a>
-
-
-
-                            <h2 id="Lesson2">Lesson 2: Law stemming from the Constitution</h2>
-                            <p>This section will examine the law flowing from the Constitution: (1) constitutional law itself, particularly criminal procedure, (2) statutory interpretation through antitrust law, and (3) administrative law, particularly through
-                              environmental and employment law. The reading on the Constitution and statutory law is:</p>
-
-                            <ul>
-                              <li>Chapter 4: The Constitution</li>
-                              <li>Chapter 10: Criminal law</li>
-                              <li>Chapter 46: Antitrust law</li>
-                            </ul>
-
-                            <h3>Handouts and Slides</h3>
+                            <p><a href="Handout_06" target="_blank">Handout 06</a>
 
 
-                            <p><a href="Handout_07" target="_blank">Handout 07</a>
 
-                              <p><a href="https://drive.google.com/open?id=1sqZJo56WVkibf2GGP64ldu0hkuJr4XCFxtoMZXE2llE
-" target="_blank">Slide Deck 04: International Law</a>
+                              <h2 id="Lesson2">Lesson 2: Law stemming from the Constitution</h2>
+                              <p>This section will examine the law flowing from the Constitution: (1) constitutional law itself, particularly criminal procedure, (2) statutory interpretation through antitrust law, and (3) administrative law, particularly
+                                through environmental and employment law. The reading on the Constitution and statutory law is:</p>
+
+                              <ul>
+                                <li>Chapter 4: The Constitution</li>
+                                <li>Chapter 10: Criminal law</li>
+                                <li>Chapter 46: Antitrust law</li>
+                              </ul>
+
+                              <h3>Handouts and Slides</h3>
+
+
+                              <p><a href="Handout_07" target="_blank">Handout 07</a>
+
+
 
 
 
