--- a/handouts.html
+++ b/handouts.html
@@ -243,6 +243,9 @@
                               <h3>Handouts and Slides</h3>
 
 
+                              <p> <a href="https://docs.google.com/presentation/d/1YhStw5XBOic2imTMSnHNi1lIJqEFwPlkjMHvt0nQOlM/edit?usp=sharing" target="_blank">Slide Deck 05: Constitutional Law</a></p>
+
+
                               <p><a href="Handout_07" target="_blank">Handout 07</a>
 
 
